# sublime-text-plugin-pip

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: codeql-analysis.yml  pypi.yml  python.yml
tests/: test_simple.py
