[project]
name = "sublime-text-plugin-pip"
description = "A Sublime Text plugin available in Package Control that enables other Sublime Text plugins to install Python modules with PIP in the Package Control ecosystem."
authors = [{name = "Todd Wildey", email="toddwildey@gmail.com"}]
dependencies = []
license = {text = "BSD-3-Clause"}
requires-python = ">=3.8"
dynamic = ["version"]
readme = "README.md"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Documentation = "https://github.com/toddwildey/sublime-text-plugin-pip"
Issues = "https://github.com/toddwildey/sublime-text-plugin-pip/issues"
Source = "https://github.com/toddwildey/sublime-text-plugin-pip"
Donate = "https://github.com/sponsors/toddwildey"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "sublime_text_plugin_pip.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["sublime_text_plugin_pip", "sublime_text_plugin_pip.*"]
